WGB-42 Bug fixes. Fixex over scroll behaviour on mobile homepage IOS.

--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/GenderSliderButtons/GenderSliderButtons.style.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/GenderSliderButtons/GenderSliderButtons.style.scss
@@ -11,7 +11,7 @@
         font-size: 15px;
 
         @include after-mobile {
-            font-size: 20px;
+            font-size: 18px;
         }
 
         &:first-of-type {
