--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/Header/Header.style.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/Header/Header.style.scss
@@ -313,6 +313,7 @@
 
         &_isWhite {
             .MenuOverlay {
+                .Header-LogoWrapper,
                 .Header-Button {
                     svg {
                         fill: var(--header-icons-black-color);
@@ -320,6 +321,7 @@
                 }
             }
 
+            .Header-LogoWrapper,
             .Header-Button {
                 svg {
                     fill: var(--header-icons-white-color);
